lots of visual improvements

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
 
   "browser_action": {
     "default_icon": "/resources/knight.png",
-    "default_popup": "html/popup.html"
+    "default_popup": "html/reportsTable.html"
   },
   "permissions": [
     "storage"
